[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Top-down Shooter Asset Pack from Kenney/Spritesheet/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyT1.gd" type="Script" id=2]
[ext_resource path="res://Assets/metal-gear-alert.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/Top-down Tanks Asset Pack from Kenney/Spritesheet/onlyObjects_default.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.1233, 19.6692 )

[sub_resource type="Animation" id=2]
resource_name = "Alerta"
tracks/0/type = "value"
tracks/0/path = NodePath("Alerta:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Flash"
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="EnemyT1" type="KinematicBody2D"]
position = Vector2( 512.937, 273.739 )
rotation = 1.5708
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 264.063, 133.92, 38.9179, 41.3129 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.668167, -1.33635 )
shape = SubResource( 1 )

[node name="MoveTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="PontaDaArma" type="Position2D" parent="."]
position = Vector2( 22.2668, 7.1326 )

[node name="Alerta" type="Sprite" parent="."]
visible = false
modulate = Color( 0.988235, 0.992157, 0.584314, 1 )
position = Vector2( -39.1484, -1.12476 )
rotation = -1.5708
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="Flash" type="Sprite" parent="."]
visible = false
position = Vector2( 31.8132, 6.65045 )
rotation = -1.5708
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Alerta = SubResource( 2 )
anims/Flash = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
